governance-shared/baselines/3.18.0/ChronoPM-Project/assets/templates/plan-template.md
---
doc_type: plan
plan_id: PLAN-YYYYMMDD-NNN
project: [项目名]
status: 正常
superseded_by: —
---

# 计划 - PLAN-YYYYMMDD-NNN - {计划名称}

> 只编排：纳入哪些工作包、大节点门禁。禁止待办行、禁止需求列、禁止按 WP 状态分章。只纳入 `effect=正常` 的 WP。
> §3「当前状态 / 执行人 / 排期 / 关键阶段」与 §4 阶段列表是 WP 的投影，禁止只改本表。改状态/人/期去 WP；改成员在本表增删行并写 §6。
> 落盘前必读本模板。文件名必须 `plans/PLAN-YYYYMMDD-NNN-{name}.md`（存量 `PLAN-NNN-*.md` 不重编）。表格 ≤7 列；§3 固定 6 列，空岗写在单元格，禁止加列。无子行。

## 1. 目标

| 字段 | 值 |
|---|---|
| 计划目标 | [本计划要达成的业务目标] |
| 开始日期 | YYYY-MM-DD |
| 结束日期 | YYYY-MM-DD |
| 计划负责人 | [总体负责人] |

## 2. 时间线 / 门禁

| 节点 | 日期 | 门禁/出口条件 | 状态 |
|---|---|---|---|
| [大事] | YYYY-MM-DD | [通过标准] | 未到/已到/已通过 |

> 表下可附一行 ASCII 示意，不能代替本表。每日人员×日期矩阵不落本文件。§2 由 PM 手写，禁止用 WP 关键阶段自动生成。

## 3. WP 引用简表

> 出现即纳入。当前状态 = WP §7 链尾阶段名（脏链尾「已完成」则取 §8 最后一个 ✅ 或 🔄）。执行人 = WP §8 当前 🔄 阶段执行人（无 🔄 则最后一个 ✅；未排=`⚠️待安排人`）。排期 = WP 开始~结束。关键阶段 = WP §8 标记为「是」的阶段名。禁止加列。

| WP 编号 | WP 名称 | 当前状态 | 执行人 | 排期 | 关键阶段 |
|---|---|---|---|---|---|
| WP-YYYYMMDD-NNN | [名称](../wps/WP-YYYYMMDD-NNN.md) | [链尾阶段名] | [当前阶段执行人] | YYYY-MM-DD~YYYY-MM-DD | 上线 |

## 4. 各 WP 阶段排期

> 数据来源：WP §8。与 §3 一样是投影，闸 2 写回盘上。图标：✅ 已完成 / 🔄 进行中（加粗）/ ⏳ 待安排。
> 落盘格式：`- 阶段名 → 图标｜执行人｜排期`。空岗写 `⚠️待安排人`；未排写 `— 待排期`。多人用「、」（与 WP §8 一致）。关键阶段在 §3 第 6 列，本列表不加第五段。
> 落盘前：有 Python 则 `python scripts/verify_projection.py --root <根> --check-plan-section4`（失败不得落盘）；无 Python 则闸 2 人工对账（§3 每个 WP 须有 `### WP-xxx` 小节，且阶段名集合=该 WP §8 实际行）。

### WP-YYYYMMDD-NNN {WP 名称}

- 需求登记 → ⏳｜⚠️待安排人｜— 待排期
- 需求调研 → ⏳｜⚠️待安排人｜— 待排期
- 需求规划 → ⏳｜⚠️待安排人｜— 待排期
- 需求评审 → ⏳｜⚠️待安排人｜— 待排期
- 需求确认 → ⏳｜⚠️待安排人｜— 待排期
- 方案设计 → ⏳｜⚠️待安排人｜— 待排期
- 用例设计 → ⏳｜⚠️待安排人｜— 待排期
- 开发 → 🔄（当前）｜储金晶（改bug）、王柏森（测试）｜2026-08-26~2026-09-15
- 预演 → ⏳｜⚠️待安排人｜— 待排期
- 测试 → ⏳｜⚠️待安排人｜— 待排期
- 内部验收 → ⏳｜⚠️待安排人｜— 待排期
- 试运行 → ⏳｜⚠️待安排人｜— 待排期
- 上线 → ⏳｜⚠️待安排人｜— 待排期

## 5. 风险 / 问题

无则写「无」。

| 编号 | 类型 | 描述 | 状态 | 关联 WP |
|---|---|---|---|---|
| R-NNN / I-NNN | 风险/问题 | [一行摘要] | [开放/关闭] | WP-YYYYMMDD-NNN |

## 6. 变更记录

只记本计划：新增/移除 WP、废弃改走 PLAN-xxx、改门禁日期。不记 WP 状态变迁。

| 时间 | 变更内容 | 原因 | 操作人 |
|---|---|---|---|
| YYYY-MM-DD | [变更] | [原因] | [姓名] |
